[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/tree/tree_sprout/tree_sprout.gd" type="Script" id=1]
[ext_resource path="res://entities/tree/tree_sprout/tree_sprout_thirsty.png" type="Texture" id=2]
[ext_resource path="res://entities/tree/tree_sprout/tree_sprout.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "thirsty",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 30.8789

[sub_resource type="CircleShape2D" id=4]
radius = 74.0

[node name="tree_sprout" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="area" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -58 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="info_panel" type="TextureButton" parent="."]
margin_left = -152.0
margin_top = -491.0
margin_right = 152.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life_space" type="Area2D" parent="."]

[node name="life_area" type="CollisionShape2D" parent="life_space"]
shape = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="info_panel" to="." method="_on_info_panel_pressed"]
